Fix config.json example city

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
     "SLACK_WEBHOOK_URL": "https://hooks.slack.com/services/example",
     "COUNTRY": "Saudi Arabia",
-    "CITY": "Egypt"
+    "CITY": "Mecca"
 }
